--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,6 @@ version = "0.1.0"
 description = "Python SDK for runqy-worker tasks"
 readme = "README.md"
 requires-python = ">=3.8"
-license = {text = "MIT"}
 dependencies = []
 authors = [
     {name = "Publikey"}
@@ -28,8 +27,8 @@ Repository = "https://github.com/Publikey/runqy-python"
 Issues = "https://github.com/Publikey/runqy-python/issues"
 
 [build-system]
-requires = ["hatchling"]
-build-backend = "hatchling.build"
+requires = ["setuptools>=61.0,<75.0", "wheel"]
+build-backend = "setuptools.build_meta"
 
-[tool.hatch.build.targets.wheel]
-packages = ["src/runqy_task"]
+[tool.setuptools.packages.find]
+where = ["src"]
